# obsidian-lib

./: .gitignore  Cargo.toml  README.md  package.json  test.js
src/: lib.rs  main.rs
test_dir/: ObsidianPlugin.obby
